# emacsplugin

./: README.md  detect-ghc-buildinfo.py  emacsplugin.cabal  stack.yaml
cbits/: emacs_plugin.c
src/: Lib.hs
