name:                emacsplugin
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mwotton/emacsplugin#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
copyright:           AllRightsReserved
category:            Web
build-type:          Configure
-- extra-source-files:
cabal-version:       >=1.10

extra-source-files: configure
                    detect-ghc-buildinfo.py

executable emacsplugin.so
  hs-source-dirs:      src
  main-is:             Lib.hs
  ghc-options:         -no-hs-main -fPIC -shared -dynamic
  C-sources:           cbits/emacs_plugin.c
  build-depends:       base
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/mwotton/emacsplugin
